Fix: the right sidebar is too large in the new version of the theme

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,25 +4,30 @@
 
 @charset "utf-8";
 
+$right-sidebar-width-narrow   : 100px;
+$right-sidebar-width          : 200px;
+$right-sidebar-width-wide     : 300px;
+$right-sidebar-padding-diff-narrow: 75px;
+$right-sidebar-padding-diff: 150px;
+$right-sidebar-padding-diff-wide: 200px;
+
 @import "minimal-mistakes";
 
-html {
-  /* apply a natural box layout model to all elements */
-  box-sizing: border-box;
-  background-color: $background-color;
-  font-size: 14px;
-
-  @include breakpoint($medium) {
-    font-size: 14px;
-  }
-
+.page {
   @include breakpoint($large) {
-    font-size: 16px;
+    float: right;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+    padding-right: $right-sidebar-width-narrow - $right-sidebar-padding-diff-narrow;
   }
 
   @include breakpoint($x-large) {
-    font-size: 18px;
+    width: calc(100% - #{$right-sidebar-width});
+    padding-right: $right-sidebar-width - $right-sidebar-padding-diff;
   }
+}
+
+.page__hero--overlay {
+  padding: 1.5em 0;
 }
 
 .page__footer footer {
@@ -30,6 +35,10 @@ html {
   margin-right: 1em;
   padding-bottom: 1em;
   font-size: 12px;
+}
+
+.page__content p {
+  margin: 0 0 0.75em;
 }
 
 html {
@@ -56,10 +65,6 @@ ul li,
 ol li {
   margin-bottom: 0.2em;
   margin-top: 0.2em;
-}
-
-.page__content p {
-  margin: 0 0 0.75em;
 }
 
 table,
